[gd_scene load_steps=6 format=3 uid="uid://18ih4l5l6xc6"]

[ext_resource type="Script" path="res://Script/PotHanging.gd" id="1_1wfx3"]
[ext_resource type="Texture2D" uid="uid://sg8dj7lscwo6" path="res://Art Assets/Pot Hang 2.png" id="3_o86qi"]

[sub_resource type="CircleShape2D" id="CircleShape2D_bpkch"]
radius = 82.7345

[sub_resource type="CircleShape2D" id="CircleShape2D_mnpll"]

[sub_resource type="CircleShape2D" id="CircleShape2D_r3xn3"]

[node name="PotHanging" type="Node2D"]
script = ExtResource("1_1wfx3")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0, -87)
texture = ExtResource("3_o86qi")

[node name="Area2D" type="Area2D" parent="." groups=["pots"]]
position = Vector2(0, -107.5)

[node name="platform_hanging" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, 84)
shape = SubResource("CircleShape2D_bpkch")

[node name="SeedArea2D" type="Area2D" parent="." groups=["pot", "pot_hanging"]]
position = Vector2(0, -107.5)

[node name="CollisionShape2D2" type="CollisionShape2D" parent="SeedArea2D"]
position = Vector2(0, 84)
shape = SubResource("CircleShape2D_bpkch")

[node name="Area2D2" type="Area2D" parent="."]
position = Vector2(0, -107.5)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D2"]
position = Vector2(11, -164.5)
shape = SubResource("CircleShape2D_mnpll")

[node name="SpawnArea2D" type="Area2D" parent="." groups=["spawned"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="SpawnArea2D"]
shape = SubResource("CircleShape2D_r3xn3")

[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="area_exited" from="Area2D" to="." method="_on_area_2d_area_exited"]
[connection signal="input_event" from="Area2D" to="." method="_on_area_2d_input_event"]
[connection signal="area_entered" from="SeedArea2D" to="." method="_on_seed_area_2d_area_entered"]
[connection signal="area_entered" from="Area2D2" to="." method="_on_area_2d_2_area_entered"]
[connection signal="area_exited" from="Area2D2" to="." method="_on_area_2d_2_area_exited"]
